sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:21: error: not found: value i
    while (i<b){
           ^AlgCocktailSort2:22: error: not found: value i
    if (isSmaller(b-i+1,b-i)){
                    ^AlgCocktailSort2:22: error: not found: value i
    if (isSmaller(b-i+1,b-i)){
                          ^AlgCocktailSort2:24: error: not found: value i
      swap(b-i,b-i+1)
             ^AlgCocktailSort2:24: error: not found: value i
      swap(b-i,b-i+1)
                 ^